--- a/app/src/main/res/layout/content_encounter_display.xml
+++ b/app/src/main/res/layout/content_encounter_display.xml
@@ -27,9 +27,9 @@
         android:id="@+id/XpView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:text="TextView"
+        android:text="Difficulty"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,7 +40,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
-        android:text="TextView"
+        android:text="XP"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/XpView"
         app:layout_constraintTop_toTopOf="parent" />
