--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -71,6 +72,13 @@
                 android:text="@string/feeling_lucky" />
 
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/diceView"
+            android:layout_width="302dp"
+            android:layout_height="523dp"
+            android:layout_margin="52dp"
+            app:srcCompat="@drawable/twentysidedsice" />
 
     </FrameLayout>
 
