Set button text to white.

--- a/app/src/main/res/layout/activity_encounter_parameters.xml
+++ b/app/src/main/res/layout/activity_encounter_parameters.xml
@@ -30,6 +30,7 @@
         android:onClick="buildEncounterWithParameters"
         android:text="Generate Encounter"
         android:textAlignment="center"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
