--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,6 +69,7 @@
                 android:layout_marginBottom="32dp"
                 android:layout_weight="1"
                 android:backgroundTint="#FF9800"
+                android:onClick="feelingLucky"
                 android:text="@string/feeling_lucky" />
 
         </LinearLayout>
